Updated paddings and margins across all pages. Fixed missing sign up form on mobile devices. Added links to gyms mobile app on classes page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ body {
     color: black;
     font-weight: bold;
     text-align: center;
-    padding-top: 75px;
+    padding: 50px 0 30px 0;
 }
 
 .joinclass {
@@ -88,12 +88,13 @@ body {
 
 
 .intro {
-    padding-top: 30px;
+    margin: 30px 0 30px 0;
+    padding-top: 15px;
 }
 
 
 .thegym {
-    margin: 0 auto
+    margin: 0 8px 0 8px;
 }
 
 .thegym p {
@@ -101,8 +102,8 @@ body {
 }
 
 .main {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 22px;
+    padding-right: 22px;
 }
 
 .main h2 {
@@ -119,6 +120,10 @@ body {
     text-align: center;
 }
 
+.quotessection {
+    margin: 20px 0 30px 0;
+}
+
 .quotes {
     padding-left: 8px;
     padding-right: 8px;  
@@ -131,13 +136,14 @@ body {
 }
 
 .gym-great {
+    margin: 20px 0 20px 0;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
 .join-now {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    margin: 30px 0 30px 0;
+    padding-top: 18px;
 }
 
 .testimonials {
@@ -181,6 +187,10 @@ body {
     padding: 0%
 }
 
+.card-deck {
+    margin: 15px -15px 15px -15px;
+}
+
 .card-body h5 {
     font-weight: bold;
 }
@@ -188,6 +198,22 @@ body {
 .card-body h5, p {
     text-align: center;
 }
+
+.apps {
+    color: #343a40;
+}
+
+.apps:hover,
+
+.apps:active
+
+.apps:focus
+
+.apps:active:focus {
+    text-decoration: none;
+    color: #00DD00;
+}
+
 
 /*----------------Navbar----------*/
 
@@ -254,8 +280,10 @@ body {
 }
 
 .circles {
-    padding-top: 30px;
-    background-color: #433961;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    background-color: #343a40;
 }
 
 .pics {
@@ -264,6 +292,7 @@ body {
 
 .media {
     width: 100%;
+    margin: 0 auto;
 }
 
 
@@ -285,7 +314,6 @@ body {
 }
 
 
-
 /*----------------Tables----------*/
 
 .table-bordered {
@@ -299,6 +327,7 @@ body {
 
 .table {
     text-align: center;
+    margin: 15px 0 30px 0;
 }
 
 
@@ -315,6 +344,10 @@ height: 200px;
 margin-bottom: 30px;
 }
 
+#map-wrapper h6 {
+    margin-bottom: 19px;
+}
+
 #map {
 border: none;
 }
@@ -322,10 +355,15 @@ border: none;
 
 /*----------------Icons----------*/
 
+.icon {
+    margin: 20px 0 20px 0;
+}
 
+.iconlist {
+    margin: 15px 0 10px 0;
+}
 
 .icon li{
-    padding: 44px 0;
     margin-left: 60px;
     margin-right: 60px;
 }
@@ -353,7 +391,7 @@ footer h4 {
 }
 
 #footer-info {
-    padding: 20px;
+    padding: 20px 0 10px 0;
 }
 
 .times {
